# libv5rt-meson

./: .gitignore  README.md  get-libv5rt.py  meson.build  patch-headers.py  patch-libv5rt.py  strip-libv5rt.py  strip_wrapper.py
